# wasm-bindgen-closure-trait-object-issue

./: Cargo.toml  README.md
src/: lib.rs
