[package]
name = "closure-trait-object-issue"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.33"
wasm-bindgen-test = "0.2.33"

[dependencies.web-sys]
version = "0.3.10"
features = [
    "Document",
    "HtmlElement",
    "Element",
    "Event",
    "EventTarget",
    "Window",
]


